@@ -5,6 +5,9 @@ Changelog
 4.0.2 (unreleased)
 ------------------
 
+- Fixed version download, when download confirmation is deactivated.
+  [phgross]
+
 - Mail Download: Convert LF to CRLF, to avoid displaing problems in MS Outlook.
   [phgross]
 
